remove mention of PermGen